--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "gatsby": "^2.29.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-masonry-css": "^1.0.14",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "simple-react-lightbox": "^3.5.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
@@ -28,8 +31,7 @@
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
- },
- 
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
