--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^3.1.1",
     "gatsby": "^2.29.2",
@@ -21,11 +22,11 @@
     "react-dom": "^17.0.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-masonry-css": "^1.0.14",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "simple-react-lightbox": "^3.5.1"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.6",
     "prettier": "2.2.1"
   },
   "peerDependencies": {
