--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^3.1.1",
     "gatsby": "^2.29.2",
+    "gatsby-background-image": "^1.4.0",
+    "gatsby-image": "^2.9.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lazy-load-image-component": "^1.5.1",
