--- a/package.json
+++ b/package.json
@@ -15,16 +15,27 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@wapps/gatsby-plugin-i18next": "^1.1.6",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^3.1.1",
     "gatsby": "^2.29.2",
     "gatsby-background-image": "^1.4.0",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-i18n": "^1.0.1",
+    "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-layout": "^1.9.0",
+    "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby-plugin-react-i18next": "0.0.27",
     "gatsby-plugin-sharp": "^2.12.2",
-    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-transformer-json": "^2.10.0",
     "gatsby-transformer-sharp": "^2.10.1",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
     "react-lazy-load-image-component": "^1.5.1",
     "react-masonry-css": "^1.0.14",
     "react-router-dom": "^5.2.0",
