--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.5",
     "react-lazy-load-image-component": "^1.5.1",
     "react-masonry-css": "^1.0.14",
