--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gatsby-plugin-layout": "^1.9.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-react-i18next": "0.0.27",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-json": "^2.10.0",
     "gatsby-transformer-sharp": "^2.10.1",
